examples/test/testpolicy14779.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14779
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key22: value41
      key41: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value12
          key35: value5
      podSelector:
        matchLabels:
          key48: value2
          key25: value16
